# hysim

fmi_cosim/: .cproject  .project  CMakeLists.txt
fmi_cosim/include/: config_cosim.h  cosim.hpp  expat.h  expat_external.h  fmiFunctions.h  fmiPlatformTypes.h  fmi_cosim.h  stack.h  support_cosim.h  support_cosim.hpp  xml_parser.h  xml_parser.hpp
fmi_cosim/logs/: Makefile  log.txt  result1.csv
fmi_cosim/models/: SineSource.fmu  jmodelica_cmd.txt  readme.txt
fmi_cosim/src/: CMakeLists.txt  cosim.cpp  main_cosim.c  main_cosim.cpp  main_cs.c  sim_support.c  stack.cpp  support_cosim.c  support_cosim.cpp  xml_parser.cpp
fmi_test/: SineSource.mo  log.txt  sim_support.h
fmi_test/models/: ControlledTemperature.fmu  HeatResPICtrl.mo
